fixing site link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<ul class="info">
 						<li><span class="first-block">Full Name:</span><span class="second-block">Alejandro Pérez</span></li>
 						<li><span class="first-block">Email:</span class="second-block"><a href="mailto:halprez@gmail.com">halprez@gmail.com</a></li>
-						<li><span class="first-block">Website:</span><span class="second-block">github.com/halprez</span></li>
+						<li><span class="first-block">Site:</span><span class="second-block"><a href="https://halprez.github.io">halprez.github.io</a></span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
