fixing site metadata

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Alejandro Perez profile site</title>
+		<title>Alejandro Pérez personal site</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
+		<meta name="description" content="Homo developer" />
 		<meta name="keywords" content="profile alejandro perez Software developer" />
 
 		<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
