--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Homo developer</h2>
-					<p>I love my family and friends. I am a technologist, ecologist, animal enthusiast, passionate for minimalism and simplicity. Besides spending time coding, I also love music, outdoor sports, yoga and meditation.</p>
+					<p>I love my family and friends. I am a technologist, ecologist and animal enthusiast who is passionate for minimalism and simplicity. Besides spending time coding, I also love music, outdoor sports, yoga and meditation.</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<ul class="fh5co-social-icons">
