--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 	
 	<!-- Main -->
 	<script src="js/main.js"></script>
-
+        <a href="http://www.reactivemanifesto.org/"> <img style="border: 0; position: fixed; left: 0; top:0; z-index: 9000" src="//d379ifj7s9wntv.cloudfront.net/reactivemanifesto/images/ribbons/we-are-reactive-black-left.png"> </a>
 	</body>
 </html>
 
