--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Alejandro Pérez personal site</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Homo developer" />
+		<meta name="description" content="Software developer" />
 		<meta name="keywords" content="profile alejandro perez Software developer" />
 
 		<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
