changing some timeline stuff and reactive manifesto

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Alejandro Pérez personal site</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Software developer" />
-		<meta name="keywords" content="profile alejandro perez Software developer" />
+		<meta name="keywords" content="profile alejandro perez software developer" />
 
 		<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Reenie+Beanie" rel="stylesheet">
@@ -76,7 +76,7 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Software developer</h2>
-					<p>I love my family and friends. I am a technologist, ecologist and animal enthusiast who is passionate for minimalism and simplicity. Besides spending time coding, I also love music, outdoor sports, yoga and meditation.</p>
+					<p>I love my family and friends. I am a technologist, ecologist and animal enthusiast who is passionate for minimalism and simplicity. Besides coding, I also love outdoor sports, yoga and meditation, playing chess and chilling out.</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<ul class="fh5co-social-icons">
@@ -95,17 +95,17 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Resume</h2>
+					<h2>Resumé</h2>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-12 col-md-offset-0">
 					<ul class="timeline">
 						<li class="timeline-heading text-center animate-box">
-							<div><h3>Work Experience</h3></div>
+							<div><h3>Today</h3></div>
 						</li>
 						<li class="animate-box timeline-unverted">
-							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-badge"><i class="icon-tools2"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Software Architect</h3>
@@ -116,7 +116,7 @@
 							</div>
 						</li>
 						<li class="animate-box timeline-unverted">
-							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-badge"><i class="icon-tools2"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Technical Lead, Backend</h3>
@@ -127,7 +127,7 @@
 							</div>
 						</li>
 						<li class="animate-box timeline-unverted">
-							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-badge"><i class="icon-tools2"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Backend Software Developer</h3>
@@ -136,34 +136,6 @@
 								<div class="timeline-body">
 								</div>
 							</div>
-						</li>
-						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">Software Developer</h3>
-									<span class="company">IATTC (2007 - 2014)</span>
-								</div>
-								<div class="timeline-body">
-									<p>.Net and SQL software developer and Data scientist.</p>
-								</div>
-							</div>
-						</li>
-						<li class="animate-box timeline-unverted">
-							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">Systems Administrator</h3>
-									<span class="company">COC/IEO (2003 - 2007)</span>
-								</div>
-								<div class="timeline-body">
-								</div>
-							</div>
-						</li>
-
-						<br>
-						<li class="timeline-heading text-center animate-box">
-							<div><h3>Education</h3></div>
 						</li>
 						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
@@ -176,6 +148,7 @@
 								</div>
 							</div>
 						</li>
+
 						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
@@ -187,17 +160,65 @@
 								</div>
 							</div>
 						</li>
+
 						<li class="animate-box timeline-unverted">
+							<div class="timeline-badge"><i class="icon-tools2"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Software Developer and Data Scientist</h3>
+									<span class="company">IATTC (2007 - 2014)</span>
+								</div>
+								<div class="timeline-body">
+									<p>.Net and SQL software developer and Data scientist</p>
+								</div>
+							</div>
+						</li>
+						<li class="animate-box timeline-unverted">
+							<div class="timeline-badge"><i class="icon-tools2"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Systems Administrator</h3>
+									<span class="company">COC/IEO (2003 - 2007)</span>
+								</div>
+
+								<div class="timeline-body">
+								</div>
+							</div>
+						</li>
+
+						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Systems Engineering Degree.</h3>
+									<h3 class="timeline-title">Systems Engineering Degree</h3>
 									<span class="company">University of La Laguna (1996 - 2003)</span>
 								</div>
 								<div class="timeline-body">
 								</div>
 							</div>
 						</li>
+
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge"><i class="icon-classic-computer"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Got my first computer</h3>
+									<span class="company">Philips MSX. 1984</span>
+								</div>
+								<div class="timeline-body">
+								</div>
+							</div>
+						</li>
+
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge"><i class="icon-calendar2"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Born</h3>
+									<span class="company">La Laguna, Tenerife. July 7th, 1977.</span>
+							</div>
+						</li>
+
 			    	</ul>
 				</div>
 			</div>
@@ -206,19 +227,15 @@
 	
 	<div id="fh5co-about" class="animate-box text-center fh5co-bg-dark">
 		<div class="container">
-			<div class="row">
-				<div class="fh5co-heading">
-					<h2>Contact Me</h2>
-				</div>
-			</div>
-			
 			<ul class="fh5co-social-icons">
-				<ul class="fh5co-social-icons">
-						<li><a href="https://twitter.com/halprez"><i class="icon-twitter2"></i></a></li>
-						<li><a href="https://github.com/halprez"><i class="icon-github2"></i></a></li>
-						<li><a href="http://www.linkedin.com/in/halprez"><i class="icon-linkedin2"></i></a></li>
-				</ul>
+				<li><h3>Contact Me: </h3></li>
+				<li><a href="https://twitter.com/halprez"><i class="icon-twitter2"></i></a></li>
+				<li><a href="https://github.com/halprez"><i class="icon-github2"></i></a></li>
+				<li><a href="http://www.linkedin.com/in/halprez"><i class="icon-linkedin2"></i></a></li>
 			</ul>
+
+
+
 		</div>
 	</div>
   	
@@ -234,14 +251,19 @@
 	<script src="js/jquery.stellar.min.js"></script>
 	<!-- Easy PieChart -->
 	<script src="js/jquery.easypiechart.min.js"></script>
-	<!-- Google Map 
+	<!-- Google Map
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
 	<script src="js/google_map.js"></script>
 	-->
-	
+
 	<!-- Main -->
 	<script src="js/main.js"></script>
-        <a href="http://www.reactivemanifesto.org/"> <img style="border: 0; position: fixed; left: 0; top:0; z-index: 9000" src="//d379ifj7s9wntv.cloudfront.net/reactivemanifesto/images/ribbons/we-are-reactive-black-left.png"> </a>
+		<a href="https://twitter.com/halprez"><i style="border: 0; position: fixed; left: 5; top:5; z-index: 9000" class="icon-twitter2"></i></a>
+		<a href="https://github.com/halprez"><i style="border: 0; position: fixed; left: 10; top:5; z-index: 9000" class="icon-github2"></i></a>
+		<a href="http://www.linkedin.com/in/halprez"><i style="border: 0; position: fixed; left: 15; top:5; z-index: 9000" class="icon-linkedin2"></i></a>
 	</body>
+
+
+
 </html>
 
