--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Alejandro Pérez personal site</title>
+		<title>Alejandro Pérez</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Software developer" />
 		<meta name="keywords" content="profile alejandro perez software developer" />
@@ -18,13 +18,10 @@
 		<link rel="stylesheet" href="css/icomoon.css">
 		<!-- Bootstrap  -->
 		<link rel="stylesheet" href="css/bootstrap.css">
-
 		<!-- Theme style  -->
 		<link rel="stylesheet" href="css/style.css">
-
 		<!-- Modernizr JS -->
 		<script src="js/modernizr-2.6.2.min.js"></script>
-		<!-- FOR IE9 below -->
 		<!--[if lt IE 9]>
 		<script src="js/respond.min.js"></script>
 		<![endif]-->
@@ -42,7 +39,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/tangoyyo.png);"></div>
+							<div class="profile-thumb" style="background: url(images/meyose.png);"></div>
 							<h1><span>Alejandro Pérez</span></h1>
 							<h3><span>Software Developer</span></h3>
 							<p>
@@ -76,7 +73,7 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Software developer</h2>
-					<p>I love my family and friends. I am a technologist, ecologist and animal enthusiast who is passionate for minimalism and simplicity. Besides coding, I also love outdoor sports, yoga and meditation, playing chess and chilling out.</p>
+					<p>I love my family and friends. I am a technologist, ecologist and animal enthusiast who is passionate for minimalism and simplicity. I am very interested in machine learning, distributed systems and decentralization. Besides CS, I also love outdoor sports, yoga and meditation, playing chess and chilling out with friends.</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<ul class="fh5co-social-icons">
@@ -141,14 +138,14 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Masters Degree in Computers Engineering. Computation.</h3>
+									<h3 class="timeline-title">Masters Degree in Computer Science (AI).</h3>
 									<span class="company">University of La Laguna (2014 - 2015)</span>
 								</div>
 								<div class="timeline-body">
 								</div>
 							</div>
 						</li>
-
+						<!---
 						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
@@ -160,7 +157,7 @@
 								</div>
 							</div>
 						</li>
-
+						---->
 						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-tools2"></i></div>
 							<div class="timeline-panel">
@@ -169,7 +166,7 @@
 									<span class="company">IATTC (2007 - 2014)</span>
 								</div>
 								<div class="timeline-body">
-									<p>.Net and SQL software developer and Data scientist</p>
+									<p>.Net software developer and data scientist</p>
 								</div>
 							</div>
 						</li>
@@ -216,6 +213,9 @@
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Born</h3>
 									<span class="company">La Laguna, Tenerife. July 7th, 1977.</span>
+								</div>
+								<div class="timeline-body">
+								</div>
 							</div>
 						</li>
 
