--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 									<li><a href="https://twitter.com/halprez"><i class="icon-twitter2"></i></a></li>
 									<li><a href="https://github.com/halprez"><i class="icon-github2"></i></a></li>
 									<li><a href="http://www.linkedin.com/in/halprez"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="mailto:halprez@gmail.com"><i class="icon-mail"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -64,25 +65,9 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4">
-					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Alejandro Pérez</span></li>
-						<li><span class="first-block">Email:</span class="second-block"><a href="mailto:halprez@gmail.com">halprez@gmail.com</a></li>
-						<li><span class="first-block">Site:</span><span class="second-block"><a href="https://halprez.github.io">halprez.github.io</a></span></li>
-					</ul>
-				</div>
-				<div class="col-md-8">
-					<h2>Software developer</h2>
-					<p>I love my family and friends. I am a technologist, ecologist and animal enthusiast who is passionate for minimalism and simplicity. I am very interested in machine learning, distributed systems and decentralization. Besides CS, I also love outdoor sports, yoga and meditation, playing chess and chilling out with friends.</p>
-					<p>
-						<ul class="fh5co-social-icons">
-							<ul class="fh5co-social-icons">
-									<li><a href="https://twitter.com/halprez"><i class="icon-twitter2"></i></a></li>
-									<li><a href="https://github.com/halprez"><i class="icon-github2"></i></a></li>
-									<li><a href="http://www.linkedin.com/in/halprez"><i class="icon-linkedin2"></i></a></li>
-							</ul>
-						</ul>
-					</p>
+				<div class="col-md-8 col-md-offset-2 text-center">
+					<h2>Homo inquisitivus</h2>
+					<p class=text-justify">I love my family and friends. I am a technologist, ecologist and animal enthusiast who is passionate for minimalism and simplicity. Now interested in machine learning, distributed computing, p2p and decentralization. Besides CS, I also love outdoor sports, yoga and meditation, playing chess and chilling out with friends.</p>
 				</div>
 			</div>
 		</div>
@@ -145,7 +130,6 @@
 								</div>
 							</div>
 						</li>
-						<!---
 						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
@@ -157,7 +141,7 @@
 								</div>
 							</div>
 						</li>
-						---->
+
 						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-tools2"></i></div>
 							<div class="timeline-panel">
@@ -226,17 +210,13 @@
 	</div>
 	
 	<div id="fh5co-about" class="animate-box text-center fh5co-bg-dark">
-		<div class="container">
+
 			<ul class="fh5co-social-icons">
 				<li><h3>Contact Me: </h3></li>
+				<li><a href="mailto:halprez@gmail.com"><i class="icon-mail"></i></a></li>
 				<li><a href="https://twitter.com/halprez"><i class="icon-twitter2"></i></a></li>
-				<li><a href="https://github.com/halprez"><i class="icon-github2"></i></a></li>
 				<li><a href="http://www.linkedin.com/in/halprez"><i class="icon-linkedin2"></i></a></li>
 			</ul>
-
-
-
-		</div>
 	</div>
   	
 	<!-- jQuery -->
@@ -249,12 +229,6 @@
 	<script src="js/jquery.waypoints.min.js"></script>
 	<!-- Stellar Parallax -->
 	<script src="js/jquery.stellar.min.js"></script>
-	<!-- Easy PieChart -->
-	<script src="js/jquery.easypiechart.min.js"></script>
-	<!-- Google Map
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
-	<script src="js/google_map.js"></script>
-	-->
 
 	<!-- Main -->
 	<script src="js/main.js"></script>
