adding some links

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Software Architect</h3>
+									<a href="https://system73.com/"
 									<span class="company">System73 (Aug 2017 - current)</span>
+									</a>
 								</div>
 								<div class="timeline-body">
 								</div>
@@ -124,7 +126,9 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Masters Degree in Computer Science (AI).</h3>
+									<a href="https://ull.es"
 									<span class="company">University of La Laguna (2014 - 2015)</span>
+									</a>
 								</div>
 								<div class="timeline-body">
 								</div>
@@ -135,7 +139,9 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Masters Degree. Statistical Learning and Data mining.</h3>
+									<a href="https://www.uned.es/"
 									<span class="company">UNED (2012 - 2014)</span>
+									</a>
 								</div>
 								<div class="timeline-body">
 								</div>
@@ -147,10 +153,12 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Software Developer and Data Scientist</h3>
+									<a href="https://www.iattc.org"
 									<span class="company">IATTC (2007 - 2014)</span>
+									</a>
 								</div>
 								<div class="timeline-body">
-									<p>.Net software developer and data scientist</p>
+
 								</div>
 							</div>
 						</li>
@@ -159,9 +167,10 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Systems Administrator</h3>
-									<span class="company">COC/IEO (2003 - 2007)</span>
+									<a href="http://www.ieo.es/en/"
+										<span class="company">COC/IEO (2003 - 2007)</span>
+									</a>
 								</div>
-
 								<div class="timeline-body">
 								</div>
 							</div>
@@ -172,7 +181,9 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Systems Engineering Degree</h3>
-									<span class="company">University of La Laguna (1996 - 2003)</span>
+									<a href="https://ull.es"
+										<span class="company">University of La Laguna (1996 - 2003)</span>
+									</a>
 								</div>
 								<div class="timeline-body">
 								</div>
@@ -184,7 +195,9 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Got my first computer</h3>
-									<span class="company">Philips MSX. 1984</span>
+									<a href="https://en.wikipedia.org/wiki/MSX"
+										<span class="company">Philips MSX. 1984</span>
+									</a>
 								</div>
 								<div class="timeline-body">
 								</div>
@@ -196,7 +209,9 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Born</h3>
-									<span class="company">La Laguna, Tenerife. July 7th, 1977.</span>
+									<a href="https://en.wikipedia.org/wiki/San_Crist%C3%B3bal_de_La_Laguna"
+									<span class="company">La Laguna, Tenerife. Canary Islands. July 7th, 1977.</span>
+									</a>
 								</div>
 								<div class="timeline-body">
 								</div>
