--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">	
-	<header id="fh5co-header" class="fh5co-cover js-fullheight animate-box" role="banner" style="background-image:url(images/yosemite_in_winter.jpg);" data-stellar-background-ratio="0.6">
+	<header id="fh5co-header" class="fh5co-cover js-fullheight animate-box" role="banner" style="background-image:url(images/riversunset.jpeg);" data-stellar-background-ratio="0.4">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -60,8 +60,8 @@
 	<div id="fh5co-about" class="animate-box fh5co-bg-dark">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>About Me</h2>
+				<div class="col-md-8 col-md-offset-2 text-center ">
+					<h1>About Me</h1>
 				</div>
 			</div>
 			<div class="row">
@@ -77,7 +77,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Resumé</h2>
+					<h2>Résumé</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -225,9 +225,8 @@
 	</div>
 	
 	<div id="fh5co-about" class="animate-box text-center fh5co-bg-dark">
-
+			<h2>Contact me</h2>
 			<ul class="fh5co-social-icons">
-				<li><h3>Contact Me: </h3></li>
 				<li><a href="mailto:halprez@gmail.com"><i class="icon-mail"></i></a></li>
 				<li><a href="https://twitter.com/halprez"><i class="icon-twitter2"></i></a></li>
 				<li><a href="http://www.linkedin.com/in/halprez"><i class="icon-linkedin2"></i></a></li>
