Revert "restoring about me"
This reverts commit b802d951b24a3b27aa805ec8f6ed5481283ff660.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
-					<h2>About me</h2>
+					<h2>Homo inquisitivus</h2>
 					<p class=text-justify">I love my family and friends. I am a technologist, ecologist and animal enthusiast who is passionate for minimalism and simplicity. Now interested in machine learning, distributed computing, p2p and decentralization. Besides CS, I also love outdoor sports, yoga and meditation, playing chess and chilling out with friends.</p>
 				</div>
 			</div>
