--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/meyose.png);"></div>
 							<h1><span>Alejandro Pérez</span></h1>
-							<h3><span>Software Developer</span></h3>
+							<h3><span>Homo inquisitivus</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://twitter.com/halprez"><i class="icon-twitter2"></i></a></li>
@@ -61,8 +61,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
-					<h2>Homo inquisitivus</h2>
-					<p class=text-justify">I love my family and friends. I am a technologist, ecologist and animal enthusiast who is passionate for minimalism and simplicity. Now interested in machine learning, distributed computing, p2p and decentralization. Besides CS, I also love outdoor sports, yoga and meditation, playing chess and chilling out with friends.</p>
+					<h2>About me</h2>
+					<p class=text-justify">I am a proud father who loves his family and friends. Graduated in CS, I am a technologist, ecologist and animal enthusiast who is passionate for minimalism and simplicity. Now interested in machine learning, distributed computing and decentralization. Besides CS, I also love outdoor sports, yoga and meditation, playing chess and chilling out with friends.</p>
 				</div>
 			</div>
 		</div>
@@ -85,37 +85,26 @@
 							<div class="timeline-badge"><i class="icon-tools2"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Software Architect</h3>
+									<h3 class="timeline-title">Self employed</h3>
 									<a href="https://system73.com/"
-									<span class="company">System73 (Aug 2017 - current)</span>
+									<span class="company">(Aug. 2019 - Current)</span>
 									</a>
 								</div>
 								<div class="timeline-body">
 								</div>
 							</div>
-						</li>
 						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-tools2"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Technical Lead, Backend</h3>
-									<span class="company">System73 (Feb 2017 - Aug 2017)</span>
+									<h3 class="timeline-title">Backend developer and tech. lead (~1.8 yrs), Software Architect (2yrs)</h3>
+									<a href="https://system73.com/"
+									<span class="company">System73 (Nov. 2015 - Aug. 2019)</span>
+									</a>
 								</div>
 								<div class="timeline-body">
 								</div>
 							</div>
-						</li>
-						<li class="animate-box timeline-unverted">
-							<div class="timeline-badge"><i class="icon-tools2"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">Backend Software Developer</h3>
-									<span class="company">System73 (Nov. 2015 - Feb 2017)</span>
-								</div>
-								<div class="timeline-body">
-								</div>
-							</div>
-						</li>
 						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
@@ -129,20 +118,6 @@
 								</div>
 							</div>
 						</li>
-						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">Masters Degree. Statistical Learning and Data mining.</h3>
-									<a href="https://www.uned.es/"
-									<span class="company">UNED (2012 - 2014)</span>
-									</a>
-								</div>
-								<div class="timeline-body">
-								</div>
-							</div>
-						</li>
-
 						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-tools2"></i></div>
 							<div class="timeline-panel">
