--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<h2>About me</h2>
-					<p class=text-justify">I am a proud father who loves his family and friends. Graduated in CS, I am a technologist, ecologist and animal enthusiast who is passionate for minimalism and simplicity. Now interested in machine learning, distributed computing and decentralization. Besides CS, I also love outdoor sports, yoga and meditation, playing chess and chilling out with friends.</p>
+					<p class=text-justify">I am a proud father of two kids who loves his family and friends. Graduated in CS, I am a technologist, ecologist and animal enthusiast who is passionate for minimalism and simplicity. Now interested in machine learning, distributed computing and decentralization. Besides CS, I also love outdoor sports, yoga and meditation, playing chess and chilling out with friends.</p>
 				</div>
 			</div>
 		</div>
