--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<h2>About me</h2>
-					<p class=text-justify">I am a proud father of two kids who loves his family and friends. Graduated in CS, I am a technologist, ecologist and animal enthusiast who is passionate for minimalism and simplicity. Now interested in machine learning, distributed computing and decentralization. Besides CS, I also love outdoor sports, yoga and meditation, playing chess and chilling out with friends.</p>
+					<p class=text-justify">I am a proud father of two kids who loves his family and friends. I am a technologist, ecologist and animal enthusiast who is passionate for minimalism and simplicity. I am a graduated MSc in CS currently interested in distributed computing and decentralization. Besides CS, I also love outdoor sports, yoga and meditation, playing chess and chilling out with friends.</p>
 				</div>
 			</div>
 		</div>
@@ -97,7 +97,7 @@
 							<div class="timeline-badge"><i class="icon-tools2"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Backend developer and tech. lead (~1.8 yrs), Software Architect (2yrs)</h3>
+									<h3 class="timeline-title">Backend developer and tech. lead (~1.8 yrs), Software Architect (2 yrs)</h3>
 									<a href="https://system73.com/"
 									<span class="company">System73 (Nov. 2015 - Aug. 2019)</span>
 									</a>
@@ -109,7 +109,7 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Masters Degree in Computer Science (AI).</h3>
+									<h3 class="timeline-title">Masters Degree in Computer Science.</h3>
 									<a href="https://ull.es"
 									<span class="company">University of La Laguna (2014 - 2015)</span>
 									</a>
@@ -150,7 +150,7 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Systems Engineering Degree</h3>
+									<h3 class="timeline-title">Computer Science degree</h3>
 									<a href="https://ull.es"
 										<span class="company">University of La Laguna (1996 - 2003)</span>
 									</a>
