--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Self employed</h3>
-									<a href="https://system73.com/"
+									<a href="https://halprez.com/"
 									<span class="company">(Aug. 2019 - Current)</span>
 									</a>
 								</div>
