--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE HTML>
-<link rel="shortcut icon" type="image/x-icon" href="https://halprez.github.io/favicon.ico">
+<!DOCTYPE html lang='en'>
+<link rel="shortcut icon" type="image/x-icon" href="https://halprez.com/favicon.ico">
 <html>
 	<head>
 		<meta charset="utf-8">
