--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html lang='en'>
+<!DOCTYPE html>
 <link rel="shortcut icon" type="image/x-icon" href="https://halprez.com/favicon.ico">
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
