--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<link rel="shortcut icon" type="image/x-icon" href="https://halprez.com/favicon.ico">
+<!DOCTYPE HTML>
+<link rel="shortcut icon" type="image/x-icon" href="https://halprez.github.io/favicon.ico">
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
