--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE HTML>
 <link rel="shortcut icon" type="image/x-icon" href="https://halprez.github.io/favicon.ico">
+<html lang="en"></html>
+
 <html>
 	<head>
 		<meta charset="utf-8">
