--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/meyose.png);"></div>
+							<div class="profile-thumb" style="background: url(images/me.png);"></div>
 							<h1><span>Alejandro Pérez</span></h1>
 							<h3><span>Homo inquisitivus</span></h3>
 							<p>
@@ -64,7 +64,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<h2>About me</h2>
-					<p class=text-justify">I am a proud father of two kids who loves his family and friends. I am a technologist, ecologist and animal enthusiast who is passionate for minimalism and simplicity. I am a graduated MSc in CS currently interested in distributed computing and decentralization. Besides CS, I also love outdoor sports, yoga and meditation, playing chess and chilling out with friends.</p>
+					<p class=text-justify">I am a proud father of two kids who loves his family and friends. I am a technologist, ecologist and animal enthusiast who is passionate for minimalism and simplicity. I am a graduated MSc in CS currently interested in distributed systems and AI. Besides CS, I also love outdoor sports, yoga and meditation, playing chess and chilling out with friends.</p>
 				</div>
 			</div>
 		</div>
@@ -87,9 +87,21 @@
 							<div class="timeline-badge"><i class="icon-tools2"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
+									<h3 class="timeline-title">Tech. Lead. Certified AWS Cloud and AI Practitioner.</h3>
+									<a href="https://xaldigital.com"
+									<span class="company">(Jun. 2023 - today)</span>
+									</a>
+								</div>
+								<div class="timeline-body">
+								</div>
+							</div>
+						<li class="animate-box timeline-unverted">
+							<div class="timeline-badge"><i class="icon-tools2"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
 									<h3 class="timeline-title">Self employed</h3>
-									<a href="https://halprez.com/"
-									<span class="company">(Aug. 2019 - Current)</span>
+									<a href="https://alexperez.me"
+									<span class="company">(Aug. 2019 - Jun. 2023)</span>
 									</a>
 								</div>
 								<div class="timeline-body">
@@ -182,7 +194,7 @@
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Born</h3>
 									<a href="https://en.wikipedia.org/wiki/San_Crist%C3%B3bal_de_La_Laguna"
-									<span class="company">La Laguna, Tenerife. Canary Islands. July 7th, 1977.</span>
+									<span class="company">In La Laguna, Tenerife. Canary Islands. July 7th, 1977.</span>
 									</a>
 								</div>
 								<div class="timeline-body">
