--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Tech. Lead. Certified AWS Cloud and AI Practitioner.</h3>
 									<a href="https://xaldigital.com"
-									<span class="company">(Jun. 2023 - today)</span>
+									<span class="company">Xal Digital (Jun. 2023 - today)</span>
 									</a>
 								</div>
 								<div class="timeline-body">
