--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<link rel="shortcut icon" type="image/x-icon" href="https://halprez.github.io/favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="https://alexperez.me/favicon.ico">
 <html lang="en"></html>
 
 <html>
@@ -48,7 +48,7 @@
 								<ul class="fh5co-social-icons">
 									<li><a href="https://twitter.com/halprez"><i class="icon-twitter2"></i></a></li>
 									<li><a href="https://github.com/halprez"><i class="icon-github2"></i></a></li>
-									<li><a href="http://www.linkedin.com/in/halprez"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/halprez"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="mailto:halprez@gmail.com"><i class="icon-mail"></i></a></li>
 								</ul>
 							</p>
@@ -151,7 +151,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Systems Administrator</h3>
-									<a href="http://www.ieo.es/en/"
+									<a href="https://www.ieo.es/en/"
 										<span class="company">COC/IEO (2003 - 2007)</span>
 									</a>
 								</div>
@@ -213,7 +213,7 @@
 			<ul class="fh5co-social-icons">
 				<li><a href="mailto:halprez@gmail.com"><i class="icon-mail"></i></a></li>
 				<li><a href="https://twitter.com/halprez"><i class="icon-twitter2"></i></a></li>
-				<li><a href="http://www.linkedin.com/in/halprez"><i class="icon-linkedin2"></i></a></li>
+				<li><a href="https://www.linkedin.com/in/halprez"><i class="icon-linkedin2"></i></a></li>
 			</ul>
 	</div>
   	
@@ -232,7 +232,7 @@
 	<script src="js/main.js"></script>
 		<a href="https://twitter.com/halprez"><i style="border: 0; position: fixed; left: 5; top:5; z-index: 9000" class="icon-twitter2"></i></a>
 		<a href="https://github.com/halprez"><i style="border: 0; position: fixed; left: 10; top:5; z-index: 9000" class="icon-github2"></i></a>
-		<a href="http://www.linkedin.com/in/halprez"><i style="border: 0; position: fixed; left: 15; top:5; z-index: 9000" class="icon-linkedin2"></i></a>
+		<a href="http:s//www.linkedin.com/in/halprez"><i style="border: 0; position: fixed; left: 15; top:5; z-index: 9000" class="icon-linkedin2"></i></a>
 	</body>
 
 
