--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<h2>About me</h2>
-					<p class=text-justify">I am a proud father of two kids who loves his family and friends. I am a technologist, ecologist and animal enthusiast who is passionate for minimalism and simplicity. I am a graduated MSc in CS currently interested in distributed systems and AI. Besides CS, I also love outdoor sports, yoga and meditation, playing chess and chilling out with friends.</p>
+					<p class=text-justify">As a proud father of two, I balance my love for family with my passion for technology and nature. With an MSc in Computer Science, I'm currently exploring distributed systems and AI while maintaining a minimalist lifestyle. When I'm not diving into code, you'll find me practicing yoga, meditating, enjoying outdoor adventures, contemplating my next chess move, or simply unwinding with friends.</p>
 				</div>
 			</div>
 		</div>
