--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<h2>About me</h2>
-					<p class=text-justify">As a proud father of two, I balance my love for family with my passion for technology and nature. With an MSc in Computer Science, I'm currently exploring distributed systems and AI while maintaining a minimalist lifestyle. When I'm not diving into code, you'll find me practicing yoga, meditating, enjoying outdoor adventures, contemplating my next chess move, or simply unwinding with friends.</p>
+					<p class=text-justify">As a proud father of two, I balance my love for family with my passion for technology and nature. With an MSc in Computer Science, I'm currently exploring distributed systems and AI while maintaining a minimalist approach. When I'm not diving into code, you'll find me practicing yoga, meditating, enjoying outdoor adventures, contemplating my next chess move, or simply unwinding with friends.</p>
 				</div>
 			</div>
 		</div>
@@ -87,7 +87,7 @@
 							<div class="timeline-badge"><i class="icon-tools2"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Tech. Lead. Certified AWS Cloud and AI Practitioner.</h3>
+									<h3 class="timeline-title">Tech. Lead</h3>
 									<a href="https://xaldigital.com"
 									<span class="company">Xal Digital (Jun. 2023 - today)</span>
 									</a>
