--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 							<div class="timeline-badge"><i class="icon-tools2"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Software Developer and Data Scientist</h3>
+									<h3 class="timeline-title">Fisheries Information Systems Specialist</h3>
 									<a href="https://www.iattc.org"
 									<span class="company">IATTC (2007 - 2014)</span>
 									</a>
