--- a/index.html
+++ b/index.html
@@ -208,6 +208,13 @@
 		</div>
 	</div>
 	
+	<div class="text-center animate-box" style="margin-top: 30px;">
+		<a href="images/Perez_Alejandro_Resume.pdf" class="btn btn-primary btn-lg" download>
+			<i class="icon-download"></i> Download My Résumé
+		</a>
+	</div>
+
+
 	<div id="fh5co-about" class="animate-box text-center fh5co-bg-dark">
 			<h2>Contact me</h2>
 			<ul class="fh5co-social-icons">
