--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@
 		</div>
 	</div>
 	
-	<div class="text-center animate-box" style="margin-top: 30px;">
+	<!-- <div class="text-center animate-box" style="margin-top: 30px;">
 		<a href="images/Perez_Alejandro_Resume.pdf" class="btn btn-primary btn-lg" download>
 			<i class="icon-download"></i> Download My Résumé
 		</a>
-	</div>
+	</div> -->
 
 
 	<div id="fh5co-about" class="animate-box text-center fh5co-bg-dark">
