--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alejandro Perez Profile</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="background-elements">
@@ -15,6 +15,6 @@
     <div class="cursor-dot"></div>
     <div class="container"></div>
     <div class="scroll-indicator"></div>
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
