adding side menu bar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
         <div class="floating-shape shape-2"></div>
         <div class="floating-shape shape-3"></div>
     </div>
-    <div class="cursor-dot"></div>
+    <nav class="floating-menu">
+        <ul class="menu-items">
+            <li><a href="#personal" class="menu-link" data-section="personal">About</a></li>
+            <li><a href="#experience" class="menu-link" data-section="experience">Experience</a></li>
+            <li><a href="#education" class="menu-link" data-section="education">Education</a></li>
+            <li><a href="#thoughts" class="menu-link" data-section="thoughts">Thoughts</a></li>
+            <li><a href="#projects" class="menu-link" data-section="projects">Projects</a></li>
+        </ul>
+    </nav>
     <div class="container"></div>
     <div class="scroll-indicator"></div>
     <script src="main.js"></script>
